<resources>
    <string name="app_name">MeetNRun</string>
    <!-- TODO: Remove or change this placeholder text.xml -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tittle_add_appointment">Add Appointment</string>
    <string name="tittle_list">List</string>
    <string name="title_user">User</string>
    <string name="user_info">User Info</string>
    <string name="availability_schedule">Availability Schedule</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="_11_00" translatable="false">11:00</string>
    <string name="_20_00" translatable="false">20:00</string>
    <string name="_19_00" translatable="false">19:00</string>
    <string name="_17_00" translatable="false">17:00</string>
    <string name="l">Mon</string>
    <string name="martes_av">Tue</string>
    <string name="miercoles_av">Wed</string>
    <string name="jueves_av">Thu</string>
    <string name="viernes_av">Fri</string>
    <string name="sabado_av">Sat</string>
    <string name="domingo_av">Sun</string>
    <string name="change_photo">Change photo</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="_01_00" translatable="false">01:00</string>
    <string name="_02_00" translatable="false">02:00</string>
    <string name="_03_00" translatable="false">03:00</string>
    <string name="_18_00" translatable="false">18:00</string>
    <string name="_21_00" translatable="false">21:00</string>
    <string name="_16_00" translatable="false">16:00</string>
    <string name="_14_00" translatable="false">14:00</string>
    <string name="_06_00" translatable="false">06:00</string>
    <string name="_04_00" translatable="false">04:00</string>
    <string name="_05_00" translatable="false">05:00</string>
    <string name="_15_00" translatable="false">15:00</string>
    <string name="_12_00" translatable="false">12:00</string>
    <string name="_10_00" translatable="false">10:00</string>
    <string name="_09_00" translatable="false">09:00</string>
    <string name="_08_00" translatable="false">08:00</string>
    <string name="_13_00" translatable="false">13:00</string>
    <string name="_07_00" translatable="false">07:00</string>
    <string name="_22_00" translatable="false">22:00</string>
    <string name="_23_00" translatable="false">23:00</string>
    <string name="phone">Phone</string>
    <string name="surname">Surname</string>
    <string name="save_user_info">Save User Info</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="request_appointment">Request Appointment</string>
    <string name="anythingSpinner_contentDescription" translatable="false">anything</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_as_professional">Sign up as Professional</string>
    <string name="sign_up_as_a_pacient">Sign up as a pacient</string>
    <string name="notification_text_appointment_confirmed">Appointment Confirmed</string>
    <string name="message_error_login">Cannot log in. Please, check your username and password or try it later.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="message_error_signup">Cannot sign up. Please, check all the fields or try it later.</string>
    <string name="message_error_passwordNotEquals">Cannot sign up, the passwords are different.</string>
    <string name="message_error_existingUser">Cannot sign up, the username is already on use.</string>
    <string name="message_info_userCreated">User created successfully</string>
    <string name="message_warning_emptyFields">Please, fill all the fields</string>
    <string name="message_warning_hourWithExistingAppointment">This hour cannot be disabled because there is a confirmed appointment using this period.</string>
    <string name="message_info_appointmentCreated">Appointment created successfully</string>
    <string name="description_notification_needsConfirmation">The appointment with %s would be set for %s %02d:00.</string>
    <string name="description_notification_created">The appointment with %s is set for %s %02d:00.</string>
    <string name="pacient">Pacient</string>
    <string name="spinner_select_one">select one</string>
    <string name="no_appointments">No appointments</string>
    <string name="you_have_0_new_notifications">You have 0 new notifications</string>
    <string name="mo">Monday</string>
    <string name="tu">Tuesday</string>
    <string name="we">Wednesday</string>
    <string name="th">Thursday</string>
    <string name="fr">Friday</string>
    <string name="sa">Saturday</string>
    <string name="su">Sunday</string>
    <string name="description_notification_cancel">The appointment with %s was cancelled</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="modify_appointment">Modify Appointment</string>
    <string name="aboutus1_title">Who am I?</string>
    <string name="aboutus2_title">How did i get here?</string>
    <string name="aboutus3_title">Where are we looking to go next?</string>
    <string name="aboutus2_body">I studied Computer Engineering at Universidad Autónoma de Madrid (finished in 2015) and Android and iOS Development at Tokio School Academy (currently). After finishing my studies at college, I started working as a Full Stack Developer at Pixelware for 3 years and at Food Experts for 3 more years, learning about WebApps Development using C# programming language and Azure Environment.</string>
    <string name="aboutus1_body">First, let me introduce myself. My name is Galo Lugo, a 28 years old guy from Ecuador. I spent 21 years in Madrid but i was born in Quito, city where I am actually living.</string>
    <string name="aboutus3_body">My goals is to gain experience in App Development to become a Freelance and associate with other companies to develop solutions for everyday problems, with an ethical point of view and prevailing the human value.</string>
    <string name="appointment_with">Appointment with %s</string>
    <string name="notification_text_appointment_cancelled">Appointment Cancelled</string>
    <string name="notification_text_modification_accepted">Modification Accepted</string>
    <string name="notification_text_modification_rejected">Modification Rejected</string>
    <string name="message_warning_noPhone">Call unavailable, the user didn\'t introduce a valid phone number</string>
    <string name="message_warning_noEmail">Email unavailable, the user didn\'t introduce a valid email address</string>
    <string name="message_warning_userNotCreated">User cannot be created. Please, check the information or try it later.</string>
</resources>