<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/_f93b327_c7d0_48cb_b7c0_9f2b5cef9b3f" />

        <TextView
            android:id="@+id/aboutUs1_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/aboutus1_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutUs1_body_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="25dp"
            android:text="@string/aboutus1_body" />

        <TextView
            android:id="@+id/aboutUs2_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus2_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutUs2_body_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="25dp"
            android:text="@string/aboutus2_body" />

        <TextView
            android:id="@+id/aboutUs3_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus3_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutUs3_body_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="25dp"
            android:text="@string/aboutus3_body" />
    </LinearLayout>
</ScrollView>