<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_appointment">

    <fragment
        android:id="@+id/nav_add_appointment"
        android:name="com.tokioschool.alugo.meetnrun.activities.ui.addAppointment.AddAppointmentFragment"
        android:label="@string/tittle_add_appointment"
        tools:layout="@layout/fragment_add_appointment" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.tokioschool.alugo.meetnrun.activities.ui.list.ListFragment"
        android:label="@string/tittle_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.tokioschool.alugo.meetnrun.activities.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>